testing more changes lol

--- a/projects/ringmaster/ringmaster-setup.html
+++ b/projects/ringmaster/ringmaster-setup.html
@@ -42,7 +42,7 @@
 	<h5>Homebrew</h5>
 
 	<ul>
-		<li>% <code>/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"</code></li>
+		<li><code>% /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"</code></li>
 		<li>% <code> brew install cowsay ffmpeg fish fortune glances htop lolcat neofetch speedtest-cli ssh-copy-id wget</code></li>
 	</ul>
 
